--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,15 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Build with Gradle
-      run: mvn clean javafx:run
+
+    - name: Run Unit Tests
+      run: mvn clean test
