--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,5 @@ jobs:
         distribution: 'temurin'
 
     - name: Run Unit Tests
+      working-directory: ./WisdomBites
       run: mvn clean test
