--- a/WisdomBites/pom.xml
+++ b/WisdomBites/pom.xml
@@ -79,3 +79,19 @@
         </plugins>
     </build>
 </project>
+<build>
+<plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.3.0</version>
+        <configuration>
+            <archive>
+                <manifest>
+                    <mainClass>WisdomBites.Main.Main</mainClass>
+                </manifest>
+            </archive>
+        </configuration>
+    </plugin>
+</plugins>
+</build>
